2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  tests for "Bug 487236 - Object initializer completion uses
	  wrong type".

2009-03-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestWorkbenchWindow.cs: Track API
	  changes.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/MemberTests.cs:
	* MonoDevelop.CSharpBinding/TopLevelTests.cs:
	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Track
	  API changes.

2009-03-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs:
	  Added test for new context.

2009-03-13  Mike Krüger  <mkrueger@novell.com>

	* UnitTests.csproj: Moved text editor to core

2009-03-10  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj:
	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Fixed
	  unit tests.

2009-03-10  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj: Updated nrefactory references.

2009-03-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Added some code completion unit tests.

2009-03-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/ParsingTests.cs: Update doctype
	  test to cover the improved captures and
	  InternalDeclarationRegion support.

2009-03-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: added
	  unit test for "Bug 480492 - Find field references returns
	  incorrect references".

2009-02-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	  Added unit test for "Bug 479983 - No C# completion for
	  object initializers".
